@@ -1277,3 +1277,4 @@ Removed the 'Domain *' directive from the DKIM configuration, which was breaking
 Added the scheduled validation tab to the Validate Virtual Servers page, for setting up automatic email notification when Virtualmin detects problems with the configuration of any server, or the global configuration.
 Added the get-command API operation to fetch the parameters of another API command, for use by authors of higher-level APIs. Also updated the list-commands operation to make its output more parsable.
 Removed the restriction on database names that start with a number, for MySQL.
+Added $WEBMIN_PORT, $WEBMIN_PROTO, $USERMIN_PORT and $USERMIN_PROTO template variables.
